--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,13 +16,17 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'  # Remplacez par '16' ou '18'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          ls -al
 
       - name: Build project
-        run: npm run build
+        run: |
+          npm run build
+          ls -al
 
       - name: Deploy to OVH
         env:
@@ -32,3 +36,5 @@ jobs:
         run: |
           echo "Deploying to OVH..."
           # Ajouter les commandes de déploiement spécifiques à OVH ici
+          ls -al
+
